<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:android="http://schemas.android.com/apk/res/android">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <ImageView
      android:layout_width="300dp"
      android:layout_height="300dp"
      android:src="@drawable/bee_rss_16"
      android:scaleType="fitCenter" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/bangers"
      android:gravity="center"
      android:text="@string/forget_password"
      android:textSize="44sp"
      android:textStyle="bold" />

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:gravity="center"
      android:fontFamily="@font/open_sans"
      android:text="@string/text_forget_password"/>

    <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/email_layout"
      style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_marginBottom="15dp"
      android:hint="@string/email">

      <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
      android:id="@+id/btn_reset_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:minHeight="50dp"
      android:backgroundTint="@color/black"
      android:text="@string/reset_password"
      android:layout_marginBottom="60dp"/>

  </LinearLayout>

</layout>
