<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">

    <ProgressBar
      android:id="@+id/progress_bar"
      style="?attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      android:visibility="invisible"
      android:background="@color/transparent"
      android:indeterminateTint="?attr/colorPrimaryVariant"
      app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="20dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <ImageView
        android:id="@+id/logo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/bee_rss_15" />

      <TextView
        android:id="@+id/logo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome"
        android:textSize="35sp"
  />

      <TextView
        android:id="@+id/signin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/sig_in"
        android:textSize="14sp"
        android:transitionName="logo_subtitle" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/username"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:transitionName="username_tran">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/password"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:transitionName="password_tran"
          app:passwordToggleEnabled="true">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
          android:id="@+id/forget_password"
          android:layout_width="200dp"
          android:layout_height="wrap_content"
          android:layout_gravity="end"
          android:padding="16dp"
          android:text="@string/forget_password_login"
          android:textAlignment="viewEnd"
          android:textColor="@color/blue"
          android:textSize="17dp"
          android:textStyle="bold" />

        <Button
          android:id="@+id/login_btn"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:background="@color/black"
          android:text="@string/go"
          android:textColor="@color/white"
          android:transitionName="button_tran" />

        <Button
          android:id="@+id/signup_btn"
          android:layout_height="wrap_content"
          android:layout_width="match_parent"
          android:layout_gravity="right"
          android:background="@color/transparent"
          android:elevation="0dp"
          android:fontFamily="@font/antic"
          android:text="@string/dont_have_account"
          android:textStyle="bold"
          android:textColor="@color/black" />

        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginTop="20dp"
          android:text="@string/or_sigin" />

        <androidx.cardview.widget.CardView
          android:layout_width="55dp"
          android:layout_height="55dp"
          app:cardCornerRadius="27dp"
          app:cardElevation="7dp"
          android:layout_marginTop="10dp"
          android:layout_marginBottom="20dp">

          <ImageView
            android:id="@+id/google_icon"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:src="@drawable/googleg_standard_color_18" />

        </androidx.cardview.widget.CardView>
      </LinearLayout>

    </LinearLayout>

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
