<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

  </data>

  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">

      <ProgressBar
        android:id="@+id/progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="invisible"
        android:background="@color/transparent"
        android:indeterminateTint="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toTopOf="parent" />

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
          android:layout_width="150dp"
          android:layout_height="150dp"
          android:src="@drawable/bee_rss_16"
          android:transitionName="logo_image" />

        <TextView
          android:id="@+id/welcome_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="-20dp"
          android:fontFamily="@font/bungee"
          android:text="@string/welcome_register"
          android:textSize="40sp"
          android:transitionName="logo_title" />

        <TextView
          android:id="@+id/signup_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:fontFamily="@font/antic"
          android:text="@string/signup"
          android:textSize="18sp"
          android:transitionName="logo_subtitle" />

        <LinearLayout
          android:id="@+id/inputs_layouts"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullname_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:hint="@string/fullname"
            android:transitionName="username_tran">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_register_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/password"
            android:transitionName="password_tran"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword" />

          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:hint="@string/repeat_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textPassword" />

          </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
          android:id="@+id/register"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/black"
          android:text="@string/go"
          android:textColor="@color/white"
          android:transitionName="button_tran" />

        <Button
          android:id="@+id/already_account"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/transparent"
          android:text="@string/have_account"
          android:textColor="@color/black"
          android:transitionName="loggin_signup_tran" />

      </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
  </ScrollView>
</layout>