<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">
  <data>

  </data>

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
      android:id="@+id/logo"
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:transitionName="logo_image"
      android:src="@drawable/logo_login"/>

    <TextView
      android:id="@+id/logo_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/bungee"
      android:text="@string/welcome"
      android:transitionName="logo_title"
      android:textSize="40sp" />

    <TextView
      android:id="@+id/signin_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="18sp"
      android:text="@string/sig_in"
      android:transitionName="logo_subtitle"
      android:fontFamily="@font/antic" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:layout_marginBottom="20dp"
      android:orientation="vertical">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:transitionName="username_tran">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/userName"/>

      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:transitionName="password_tran">

        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/password"/>

      </com.google.android.material.textfield.TextInputLayout>

      <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:textColor="@color/black"
        android:layout_gravity="right"
        android:elevation="0dp"
        android:text="@string/forget_password"/>

      <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:transitionName="button_tran"
        android:text="@string/go"/>

      <Button
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@color/transparent"
        android:elevation="0dp"
        android:fontFamily="@font/antic"
        android:text="@string/new_user"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:transitionName="loggin_signup_tran"/>

    </LinearLayout>

  </LinearLayout>
</layout>
